Updates to navigation and styling

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
       <a href="#"><i class="fa fa-twitter"></i></a> 
       <a href="#"><i class="fa fa-linkedin"></i></a> 
       <a href="#"><i class="fa fa-github"></i></a>
-      Chesnowitz Interactive Ruby-on-Rails-a-Beginners-Guide www.chesnowitz.com
+      Simple Ruby Articles blog
      </div> 
    </div>
   <div class="footer-right"> <p>Contact Us</p>
