--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+     <%= link_to "Ruby Articles", root_path,class:"navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,6 +18,8 @@
       </ul>
     
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Contact Us", pages_contact_path %></li>
+        <li><%= link_to "About us", pages_about_path %></li>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <li><%= link_to "Sign in", new_user_session_path %></li>
         <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
